; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/kdf/extr_scrypt.c_pkey_scrypt_ctrl_uint64.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssl/crypto/kdf/extr_scrypt.c_pkey_scrypt_ctrl_uint64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KDF_F_PKEY_SCRYPT_CTRL_UINT64 = common dso_local global i32 0, align 4
@KDF_R_VALUE_ERROR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @pkey_scrypt_ctrl_uint64 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pkey_scrypt_ctrl_uint64(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %7, align 8
  %10 = call i32 @atou64(i8* %9, i32* %8)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* @KDF_F_PKEY_SCRYPT_CTRL_UINT64, align 4
  %14 = load i32, i32* @KDF_R_VALUE_ERROR, align 4
  %15 = call i32 @KDFerr(i32 %13, i32 %14)
  store i32 0, i32* %4, align 4
  br label %20

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = load i32, i32* %6, align 4
  %19 = call i32 @pkey_scrypt_ctrl(i32* %17, i32 %18, i32 0, i32* %8)
  store i32 %19, i32* %4, align 4
  br label %20

20:                                               ; preds = %16, %12
  %21 = load i32, i32* %4, align 4
  ret i32 %21
}

declare dso_local i32 @atou64(i8*, i32*) #1

declare dso_local i32 @KDFerr(i32, i32) #1

declare dso_local i32 @pkey_scrypt_ctrl(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
